--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,20 @@ version: '3.4'
 services:
   garbagegenerator:
     image: garbagegenerator
+    logging:
+      driver: none
     build:
       context: .
       dockerfile: GarbageGenerator/Dockerfile
     environment:
-        - ASPNETCORE_URLS=http://+:5000
+        - ASPNETCORE_URLS=http://*:5000
+        - to_power_of=20
+        - name=1
     ports:
       - 5000
   gci-proxy:
     image: gciproxy
-    depends_on: 
-      - garbagegenerator
     environment:
-      - flags=-gci_path=__gci -gci_target=garbagegenerator:5000 -target garbagegenerator:5000 -ygen 67108864
+      - flags=-gci_path=__gci -gci_target=garbagegenerator:5000 -target garbagegenerator:5000 -ygen=40108864
     ports:
-      - 3000:3000
+      - 80:3000
